--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,20 @@
   "minimum-stability": "beta",
   "require": {
     "php": ">=7.1",
-    "psr/log": "^1.0",
-    "symfony/symfony": "^2.7|^3.0",
     "doctrine/orm": "^2.3",
-    "treehouselabs/queue": "^0.3"
+    "psr/log": "^1.0",
+    "symfony/config": "^3.0|^4.0",
+    "symfony/console": "^3.0|^4.0",
+    "symfony/dependency-injection": "^3.0|^4.0",
+    "symfony/framework-bundle": "^3.0|^4.0",
+    "symfony/http-kernel": "^3.0|^4.0",
+    "treehouselabs/queue": "^0.4"
   },
   "require-dev": {
     "ext-amqp": "^1.7",
-    "phpunit/phpunit": "^5.0",
+    "matthiasnoback/symfony-dependency-injection-test": "^0.7.6",
     "mockery/mockery": "^0.9.4",
-    "matthiasnoback/symfony-dependency-injection-test": "^0.7.6"
+    "phpunit/phpunit": "^5.0"
   },
   "autoload": {
     "psr-4": {
@@ -33,5 +37,8 @@
     "psr-4": {
       "TreeHouse\\QueueBundle\\Tests\\": "tests/src/TreeHouse/QueueBundle/"
     }
+  },
+  "config": {
+    "sort-packages": true
   }
 }
