--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,27 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit
-  backupGlobals               = "false"
-  backupStaticAttributes      = "false"
-  colors                      = "true"
-  convertErrorsToExceptions   = "true"
-  convertNoticesToExceptions  = "true"
-  convertWarningsToExceptions = "true"
-  processIsolation            = "false"
-  stopOnFailure               = "false"
-  syntaxCheck                 = "false"
-  bootstrap                   = "vendor/autoload.php">
+<!-- https://phpunit.readthedocs.io/en/latest/configuration.html -->
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+         backupGlobals="false"
+         colors="true"
+         bootstrap="vendor/autoload.php">
 
   <testsuites>
-    <testsuite>
+    <testsuite name="Tests">
       <directory>./tests</directory>
     </testsuite>
   </testsuites>
-
-  <listeners>
-    <listener class="Mockery\Adapter\Phpunit\TestListener"/>
-  </listeners>
 
   <filter>
     <whitelist>
@@ -31,6 +21,6 @@
 
   <logging>
     <log type="coverage-text" target="php://stdout"/>
-    <log type="coverage-html" target="build/coverage" charset="UTF-8" yui="true" highlight="true"/>
+    <log type="coverage-html" target="build/coverage"/>
   </logging>
 </phpunit>
