trying out SO suggestion

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,16 @@ matrix:
 install: travis_retry ./tests/travis/install.sh
 
 before_script:
+  - curl -fsSL https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc | sudo apt-key add -
+  - sudo apt-get install apt-transport-https
+  - echo "deb http://dl.bintray.com/rabbitmq-erlang/debian xenial erlang-22.x" >  | sudo tee  /etc/apt/sources.list.d/bintray.erlang.list > /dev/null
+  - sudo apt-get update -y
+  - sudo apt-get install -y erlang-base \
+  - erlang-asn1 erlang-crypto erlang-eldap erlang-ftp erlang-inets \
+  - erlang-mnesia erlang-os-mon erlang-parsetools erlang-public-key \
+  - erlang-runtime-tools erlang-snmp erlang-ssl \
+  - erlang-syntax-tools erlang-tftp erlang-tools erlang-xmerl
+
   - sudo cp $TRAVIS_BUILD_DIR/provision/rabbitmq.config /etc/rabbitmq/
   - sudo service rabbitmq-server restart
   - git clone https://github.com/alanxz/rabbitmq-c.git
