--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   },
   "require-dev": {
     "ext-amqp": "^1.7",
-    "matthiasnoback/symfony-dependency-injection-test": "^4.1",
+    "matthiasnoback/symfony-dependency-injection-test": "^3.1|^4.1",
     "phpunit/phpunit": "^8.0"
   },
   "autoload": {
