--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   "require-dev": {
     "ext-amqp": "^1.7",
     "matthiasnoback/symfony-dependency-injection-test": "^3.1|^4.1",
-    "phpunit/phpunit": "^8.0"
+    "phpunit/phpunit": "^7.0|^8.0"
   },
   "autoload": {
     "psr-4": {
